retrieveUnpackaged/objects/RelationProfessionalPatient__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PatientCity__c</fullName>
        <description>/</description>
        <formula>Patient__r.City__c</formula>
        <label>Patient City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientCountry__c</fullName>
        <description>/</description>
        <formula>Text(Patient__r.Country__c)</formula>
        <label>Patient Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientFirstName__c</fullName>
        <description>/</description>
        <formula>Patient__r.FirstName__c</formula>
        <label>Patient First Given Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientLastName__c</fullName>
        <description>/</description>
        <formula>Patient__r.LastName__c</formula>
        <label>Patient Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientName__c</fullName>
        <description>/</description>
        <formula>Patient__r.Name</formula>
        <label>Patient Patient Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>/</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Professionals</relationshipLabel>
        <relationshipName>Patient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfessionalCity__c</fullName>
        <formula>Professional__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalEmail__c</fullName>
        <description>/</description>
        <formula>Professional__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalFirstName__c</fullName>
        <description>/</description>
        <formula>Professional__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalLastName__c</fullName>
        <description>/</description>
        <formula>Professional__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalMailingCity__c</fullName>
        <description>/</description>
        <formula>Professional__r.MailingCity</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalMobilePhone__c</fullName>
        <description>/</description>
        <formula>Professional__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalName__c</fullName>
        <description>/</description>
        <formula>Professional__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalPhone__c</fullName>
        <description>/</description>
        <formula>Professional__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalRecordType__c</fullName>
        <formula>Professional__r.RecordTypeLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalSalutation__c</fullName>
        <description>/</description>
        <formula>Text(Professional__r.Salutation)</formula>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalStreet__c</fullName>
        <formula>Professional__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalTitle__c</fullName>
        <description>/</description>
        <formula>Professional__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalTrainingStatus__c</fullName>
        <description>/</description>
        <formula>Text(Professional__r.TrainingStatus__c)</formula>
        <label>Training Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional__c</fullName>
        <description>/</description>
        <label>Professional</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>R00ND0000003MsOKMA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relation Professional Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000000}</displayFormat>
        <label>Relation Professional Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations Professional Patient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>